--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             .journeyContainer {
 
                 display: grid;
-                grid-template-columns: 1fr;
+                grid-template-columns: 1fr 1fr;
             }
         }
 
@@ -309,7 +309,7 @@
         <div id="sliderContainer"
             style="display:none; background:#111; padding:10px; border-radius:8px; margin-top:5px; color:white; font-size:0.4em;">
             <label for="fontSlider">Font Size:</label>
-            <input type="range" id="fontSlider" min="1" max="6" step="0.1">
+            <input type="range" id="fontSlider" min="0.8" max="6" step="0.1">
         </div>
     </div>
 
