--- a/test.html
+++ b/test.html
@@ -78,7 +78,7 @@
 
   <div class="iframe-container">
     <span>Barking</span>
-    <iframe class="frame" style="zoom: 0.65" src="https://tubestatus.net/departures/circle/BKG?m#board" scrolling="no" title="Barking Station View 1"></iframe>
+    <iframe class="frame" style="zoom: 0.65" src="https://tubestatus.net/departures/circle/BKG?m#board" scrolling="yes" title="Barking Station View 1"></iframe>
   </div>
 
   <div class="iframe-container">
